# digital_twin_mw

./: .env  Cargo.toml  docker-compose.yml
backend-tests/: .env  package-lock.json
backend-tests/src/: api.test.js  knexfile.js
database/: init.sql  init_001.sql
src/: app_state.rs  lib.rs  main.rs  router.rs
src/database/: core_action_reset_frequency.rs  core_model.rs  core_model_component.rs  core_model_type.rs  core_policy.rs  core_policy_action.rs  core_policy_violation.rs  core_role.rs  core_shared_model_data.rs  core_twin.rs  core_twin_component.rs  core_twin_status.rs  core_user.rs  core_user_model_policy.rs  core_user_subscription.rs  mod.rs  prelude.rs
src/helpers/: mod.rs  model_mgmt_helpers.rs  policy_mgmt_helpers.rs
src/middleware/: require_authentication.rs
src/queries/: mod.rs  model_queries.rs  policy_queries.rs  role_queries.rs  shared_data_queries.rs  twin_queries.rs  user_queries.rs
src/routes/: mod.rs
src/routes/models/: create_model.rs  create_model_component_extractor.rs  create_model_extractor.rs  delete_model.rs  get_all_models.rs  mod.rs  publish_model.rs  unpublish_model.rs
src/routes/policys/: create_policy.rs  create_policy_action_extractor.rs  create_policy_extractor.rs  get_latest_policy.rs  mod.rs
src/routes/twins/: create_twin_extractor.rs  delete_twin.rs  get_all_user_twins.rs  get_one_user_twin.rs  mod.rs  subscribe_to_model.rs  twin_usage.rs  (+1 more)
src/utilities/: app_error.rs  docker_helper.rs  jwt.rs  mod.rs  redis_connection_wrapper.rs  redis_helper.rs  token_duration_wrapper.rs  token_wrapper.rs
tests/: quick_dev.rs
(+6 files in other folders)
