[package]
name = "digital_twin_mw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros", "headers"] }
axum-extra = { version = "0.7.4", features = ["cookie"] }
bcrypt = "0.14.0"
bollard = "0.14.0"
cargo-watch = "8.4.0"
chrono = "0.4.26"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
futures-util = "0.3.28"
hyper = { version = "0.14.27", features = ["full"] }
jsonwebtoken = "8.3.0"
maplit = "1.0.2"
rand = "0.8.5"
redis = { version = "0.23.0", features = ["tokio-comp"] }
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_with = "3.0.0"
tokio = { version = "1.28.2", features = ["full"] }
tower-cookies = "0.9.0"
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.16.0", features = ["derive"] }

[dev-dependencies]
httpc-test= "0.1.0"
anyhow = "1.0.44"
